# gym-rotor-modularRL

./: .gitignore  .gitmodules  README.md  args_parse.py  draw_plot.py  main.py  pyproject.toml
algos/: policy_regularization.py  replay_buffer.py
models/: CMP_578.0k_steps_agent_0_789.pth  CMP_578.0k_steps_agent_0_solved_789.pth  CMP_584.0k_steps_agent_0_800.pth  CMP_584.0k_steps_agent_1_800.pth  CMP_586.0k_steps_agent_0_800.pth  CMP_588.0k_steps_agent_1_800.pth  CMP_592.0k_steps_agent_1_800.pth  CMP_594.0k_steps_agent_0_800.pth  CMP_616.0k_steps_agent_1_789.pth  CMP_616.0k_steps_agent_1_solved_789.pth  CMP_622.0k_steps_agent_1_solved_800.pth  CMP_624.0k_steps_agent_1_solved_800.pth  CMP_626.0k_steps_agent_1_solved_800.pth  CMP_628.0k_steps_agent_1_solved_800.pth  CMP_630.0k_steps_agent_1_solved_800.pth  CMP_632.0k_steps_agent_1_solved_800.pth  CMP_634.0k_steps_agent_1_solved_800.pth  CMP_644.0k_steps_agent_1_solved_800.pth  CMP_650.0k_steps_agent_1_solved_800.pth  CMP_652.0k_steps_agent_1_solved_800.pth  CMP_656.0k_steps_agent_1_solved_800.pth  CMP_660.0k_steps_agent_1_solved_800.pth  CMP_662.0k_steps_agent_1_solved_800.pth  CMP_668.0k_steps_agent_1_solved_800.pth  CMP_678.0k_steps_agent_1_solved_800.pth  CMP_680.0k_steps_agent_1_solved_800.pth  CMP_682.0k_steps_agent_1_solved_800.pth  CMP_684.0k_steps_agent_1_solved_800.pth  CMP_686.0k_steps_agent_1_solved_800.pth  CMP_692.0k_steps_agent_1_solved_800.pth  CMP_694.0k_steps_agent_1_solved_800.pth  CMP_696.0k_steps_agent_1_solved_800.pth  CMP_698.0k_steps_agent_1_solved_800.pth  CMP_702.0k_steps_agent_1_solved_800.pth  (+3 more)
(+6 files in other folders)
